# bifrost

./: .gitattributes  .gitignore  .lsp.json  404.html  AGENTS.md  ANALYZER_PERSISTENCE_EXECPLAN.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECPLAN.md  EXECPLAN_BROKK_SEARCHTOOLS_SYNC.md  ISSUE_114_SCALA_USAGE_GRAPH_EXECPLAN.md  ISSUE_170_BENCHMARK_HARNESS_EXECPLAN.md  ISSUE_78_EXECPLAN.md  LOCAL_USAGE_INFERENCE_EXECPLAN.md  MCP_SERVER_SPLIT_EXECPLAN.md  MOST_RELEVANT_FILES_EXECPLAN.md  PLANS.md  PYTHON_USAGE_GRAPH_PARITY_EXECPLAN.md  README.md  RUST_USAGE_GRAPH_PARITY_EXECPLAN.md  SEARCHTOOLS_PYO3_EXECPLAN.md  SECURITY.md  STRUCTURAL_CLONE_MULTI_LANGUAGE_EXECPLAN.md  THIRD_PARTY_LICENSES.html  analyzer.txt  brokk-parity.md  build.rs  index.html  pyproject.toml  sitemap-0.xml  sitemap-index.xml  versions.json
.agent/: CPP_OVERLOAD_USAGES_EXECPLAN.md  EXECPLAN_INTELLIJ_PYTHON_FINDUSAGES.md  ISSUE_184_RUST_DEAD_CODE_EXECPLAN.md  ISSUE_192_ANALYZER_BACKED_RESOLVER_EXECPLAN.md  ISSUE_193_GET_DEFINITION_EXECPLAN.md  ISSUE_206_RUST_DEFINITION_RESOLVER_EXECPLAN.md  ISSUE_213_GO_STRUCTURAL_TYPE_RELATIONS_EXECPLAN.md  ISSUE_222_OBVIOUS_MEMBER_FLOWS_EXECPLAN.md  ISSUE_328_SEARCH_AST_EXECPLAN.md  ISSUE_328_SEARCH_AST_REVIEW_EXECPLAN.md  ISSUE_393_RECEIVER_FACTS_EXECPLAN.md  ISSUE_394_OBJECT_SENSITIVE_RECEIVER_EXECPLAN.md  PARITY_CROSS_LANGUAGE_GENERALIZATION.md  SUMMARIZE_SYMBOLS_SEARCHTOOLS_EXECPLAN.md  analyzer-borrowed-views-execplan.md  bare-filename-repair-execplan.md  cpp-usage-graph-split-execplan.md  csharp-usage-graph-execplan.md  fast-hash-collections-execplan.md  get-summaries-cleanup-execplan.md  go-usage-graph-execplan.md  java-usage-analysis-execplan.md  most-relevant-files-weighted-recency-execplan.md  scala-symbol-lookup-liberalization-execplan.md  search-symbols-ranking-execplan.md  tree-sitter-mini-parser-cleanup-execplan.md
.agents/: PLANS.md
.brokk/: project.properties
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json
.github/: pull_request_template.md
_astro/: Search.astro_astro_type_script_index_0_lang.C-ipz2AF.js  ui-core.BMuQa8nb.js
amp/: index.html
benchmark/: README.md  get_definition_observations.md  targets.toml
bifrost_searchtools/: README.md  __init__.py  client.py  models.py
claude-code/: index.html
codex/: index.html
cursor/: index.html
docs/: README.md  agent-plugin-publication.md  astro.config.mjs  execplan-broad-lsp-identifier-cursor-contexts.md  execplan-call-hierarchy-prepare-cursor-contexts.md  execplan-lsp-document-formatting.md  execplan-signature-help-parameter-metadata.md  execplan-tighten-lsp-type-hierarchy-implementation-contexts.md  execplan-type-definition-cursor-contexts.md  package-lock.json  package.json  rehype-base-path-links.mjs
examples/: README.md
install/: index.html
licenses/: .gitattributes  SUPPLEMENTAL_THIRD_PARTY_NOTICES.txt  THIRD_PARTY_LICENSES.html  about.hbs  about.toml  deny.toml
lsp/: index.html
mcp/: index.html
overview/: index.html
pagefind/: pagefind.en_98a4542680.pf_meta
python_tests/: test_searchtools_client.py
scripts/: announce-discord-release.sh  check-codex-plugin-manifest.mjs  check-crate-package.sh  check-github-actions-security.sh  cleanup-bifrost-tmp.sh  fuzz_concurrent_searchtools.py  generate-amp-skill-bundle.mjs  generate-codex-skill-bundle.mjs  generate-supplemental-third-party-notices.mjs  github-actions-policy.test.mjs  java-class-fixture-lib.sh  mcp-fuzzer-repo-rank.py  prepare-vscode-extension-manifest.mjs  prepare-vscode-license-artifacts.mjs  regenerate-java-class-fixture.sh  resolve-docs-version.mjs  run-cfg-algorithm-benchmarks.sh  run-dataflow-lifecycle-benchmarks.sh  run-semantic-cfg-benchmarks.sh  run-semantic-oracle-benchmarks.sh  sync-release-version.mjs  test_python.sh  verify-java-class-fixture.sh  voyage_sidecar.py  with-isolated-cargo-target.sh
src/: cache_db.rs  cache_gc.rs  cancellation.rs  code_quality.rs  commit_analysis.rs  compact_graph.rs  file_access.rs  file_tools.rs  git_file.rs  git_tools.rs  gitblob.rs  hash.rs  lib.rs  mcp_cli.rs  mcp_common.rs  mcp_core.rs  mcp_extended.rs  mcp_nlp.rs  mcp_registry.rs  mcp_server.rs  mcp_slopcop.rs  mcp_text.rs  model_context.rs  path_normalization.rs  path_utils.rs  process.rs  profiling.rs  relevance.rs  (+16 more)
(+1246 files in other folders)
