[package]
name = "brokk_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.18.0"
moka = { version = "0.12.11", features = ["sync"] }
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.12.2"
tree-sitter = "0.25.10"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
