[package]
name = "brokk_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.3"
ignore = "0.4.24"
indicatif = "0.18.0"
moka = { version = "0.12.11", features = ["sync"] }
notify = "6.1.1"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Tree-sitter policy:
# - keep one shared runtime version
# - pin each grammar crate to a known-compatible upstream release
# - grammar crate versions are intentionally not forced to match numerically,
#   because the upstream language crates are released independently
tree-sitter = "0.25.10"

# Grammars already on the current 0.25 line.
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-scala = "0.25.0"

# Grammars that still need older published releases for this port.
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-php = "0.23.11"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
