[project]
name = "bifrost-searchtools"
version = "0.1.0"
description = "Python searchtools client backed by a native bifrost Rust extension"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "bifrost_searchtools._native"
python-source = "."

[tool.uv]
package = false
